packages/apex-parser-ast/test/fixtures/validation/syntax-error/MissingClosingMark.cls
public class MissingClosingMark {
    /* unclosed multi-line comment
    public void test() {
    }
}
